[package]
authors = ["prfss <gprfss4815@gmail.com>"]
edition = "2018"
name = "aclib"
version = "0.1.0"

[dependencies]

[dev-dependencies]
# bitflagsのバージョンを固定(https://github.com/clap-rs/clap/issues/2691)
bitflags = "=1.2.1"
criterion = "=0.2"
proptest = "^1.0.0"
rand = {version = "0.8.5", features = ["small_rng"]}
rayon = "=1.3"
rayon-core = "=1.7.0"

[[bench]]
harness = false
name = "benchmark"
