[package]
authors = ["prfss <gprfss4815@gmail.com>"]
edition = "2021"
name = "aclib"
version = "0.1.0"

[dependencies]
num = "=0.4.1"
rand = {version = "=0.8.5", features = ["small_rng"]}

[dev-dependencies]
criterion = "=0.2"
proptest = "^1.0.0"
rayon = "=1.3"
rayon-core = "=1.7.0"

[[bench]]
harness = false
name = "benchmark"
